--- a/style.css
+++ b/style.css
@@ -9,3 +9,22 @@ body {
 h1 {
   margin-top: 40px;
 }
+
+a {
+  color: #000;
+  font-size: 20px;
+  padding: 10px 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-top: 50px;
+}
+
+button {
+  margin-top: 50px;
+  padding: 10px 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #000;
+  font-size: 20px;
+  cursor: pointer;
+}
