--- a/style.css
+++ b/style.css
@@ -28,3 +28,38 @@ button {
   font-size: 20px;
   cursor: pointer;
 }
+/* Top left display */
+#overview {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  margin: 20px;
+  padding: 10px 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #000;
+  font-size: 20px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#selectvar {
+  /* select box */
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #000;
+  font-size: 20px;
+}
+
+/* put the #minussymbol and #plussymbol to the side of the play button */
+
+#animate {
+  display: flex;
+  flex-direction: row;
+}
