--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
   justify-content: center;
   flex-direction: column;
 }
-
+ 
 h1 {
   margin-top: 40px;
 }
-
+ 
 a {
   color: #000;
   font-size: 20px;
@@ -18,7 +18,7 @@ a {
   border-radius: 5px;
   margin-top: 50px;
 }
-
+ 
 button {
   margin-top: 50px;
   padding: 10px 20px;
@@ -40,13 +40,13 @@ button {
   border: 1px solid #000;
   font-size: 20px;
 }
-
+ 
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
+ 
 #selectvar {
   /* select box */
   margin-bottom: 10px;
@@ -56,10 +56,65 @@ ul {
   border: 1px solid #000;
   font-size: 20px;
 }
-
+ 
 /* put the #minussymbol and #plussymbol to the side of the play button */
-
+ 
 #animate {
   display: flex;
   flex-direction: row;
+}
+ 
+ 
+.tooltip {
+  position: absolute;
+  text-align: center;
+  padding: 4px;
+  font-size: 12px;
+  font-weight: bold;
+  background: #fff;
+  border: 1px solid #000;
+  pointer-events: none;
+}
+ 
+ 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+ 
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+  max-height: 80%;
+  overflow-y: auto;
+}
+ 
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+ 
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+ 
+#modal-series div {
+  margin-bottom: 5px;
 }
